@@ -1,4 +1,5 @@
-# Possible Mods are Alt, Control, CtrlAlt, ShftAlt, Super, ShftSuper, CtrlSuper, ALTSuper
+# Possible Mods are Alt, Control, CtrlAlt, ShftAlt, Super,
+#  ShftSuper, CtrlSuper, ALTSuper, NULL(for no Mod key)
 #
 # Set external commands ; use with spawn
 CMD dmenucmd;dmenu_run;-i;-nb;#666622;-nf;white;NULL;
@@ -13,7 +14,7 @@ KEY Alt;6;change_desktop;5;
 KEY Alt;7;change_desktop;6;
 KEY Alt;8;change_desktop;7;
 KEY Alt;9;change_desktop;8;
-KEY Alt;F10;change_desktop;9;
+KEY Alt;0;change_desktop;9;
 #
 KEY Super;Right;rotate_desktop;1;
 KEY Super;Left;rotate_desktop;-1;
