@@ -1,12 +1,13 @@
 # lines starting with a hash are ignored
 # Number of DESKTOPS should be first
 DESKTOPS 6
-#
+# Desktop switcher background colours
 # switchertheme colours are :
 #    focused desktop in switcher
 #    unfocused desktop in switcher
 #    unfocused desktop in switcher with opened windows
 #    the bars border
+# Font and bar backgrounds colours
 SWITCHERTHEME #443311;#002030;#004060;#001020;
 # statustheme colours are :
 #    default bar background
@@ -23,15 +24,19 @@ WINDOWTHEME #443311;#002030;
 BORDERWIDTH 2
 # percentage of the desktop for the main window
 MASTERSIZE 52
-# open new windows in the stack?
+# default tiling modes for each desktop(defaults to 0):
+# must end in semicolon
+#     0=vert,1=fullscreen,2=horiz,3=grid,4=stacking
+DEFAULTMODE 3;4;0;1;2;3;
+# Set number of extra window/s in the master area(defaults to 0)
+# must end in semicolon
+NMASTER 0;0;1;o;2;0;
+# open new windows in the stack? 0=yes,1=no
 ATTACHASIDE 1
 # if new window is in the stack add it at the top
 TOPSTACK 1
 # if in stacking mode center window # (1) is best for gimp
 CENTER_STACK 0
-# default tiling modes for each desktop(defaults to 0):
-#     0=vert,1=fullscreen,2=horiz,3=grid,4=stacking
-DEFAULTMODE 3;4;0;1;2;3;
 # Select monitor the bar will be on, not needed with one monitor
 # BAR_MONITOR 1
 # Change from stacking mode to new mode when reaching this many
@@ -43,7 +48,7 @@ UF_WIN_ALPHA 65
 # only one of FOLLOWMOUSE and CLICKTOFOCUS should be zero, but none have to be
 FOLLOWMOUSE 1
 CLICKTOFOCUS 0
-# Background colour for the focused window's name
+# Background colour for the focused window's name in the bar from STATUSTHEME
 WNAMEBG 7
 # left align the focused window's name in the bar
 LEFT_WINDOWNAME 0
@@ -51,7 +56,7 @@ LEFT_WINDOWNAME 0
 WINDOWNAMELENGTH 35
 TOPBAR 0
 SHOW_BAR 0
-# Show the number of opened windows?
+# Show the number of opened windows in the desktop switcher?
 SHOWNUMOPEN 1
 # How to display the current tiling mode in the bar
 MODENAME [V];[F];[H];[G];[C];
